fix: header z-index

--- a/client/src/components/Drawer/Drawer.module.scss
+++ b/client/src/components/Drawer/Drawer.module.scss
@@ -2,7 +2,7 @@
 
 .underlay {
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   width: 100%;
   height: 100%;
   background-color: rgb(0, 0, 0, 0.3);
@@ -26,7 +26,7 @@
 .drawer {
   position: fixed;
   right: 0;
-  z-index: 2;
+  z-index: 100;
   width: 90%;
   height: 100%;
   background-color: var(--color-dark4);
